testsuite/tests/rep-poly/RepPolyDoBody2.stderr

RepPolyDoBody2.hs:23:3: error:
    • The second argument to (>>),
      arising from the ‘do’ statement,
      does not have a fixed runtime representation.
      Its type is:
        mb0 :: TYPE rep
    • In a stmt of a 'do' block: undefined :: ()
      In the expression:
        do undefined :: ()
         return ()
      In an equation for ‘foo’:
          foo _
            = do undefined :: ()
               return ()
